[workspace]

resolver = "2"

members = [
  "crates/prover-components",
  "crates/sp1-prover-components",
  "crates/ethereum-chain-components",
]

[workspace.package]

version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository = "https://github.com/informalsystems/hermes-ethereum-relayer"
authors = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.81"

[profile.release]
overflow-checks = true

[workspace.dependencies]

serde = { version = "1.0.210" }
anyhow = { version = "1.0.93" }
bincode = { version = "1.3.3" }
alloy = { version = "0.6" }
sp1-sdk = { version = "3.0.0", default-features = false }
sp1-prover = { version = "3.0.0", default-features = false }

hermes-prover-components = { version = "0.1.0" }
hermes-sp1-prover-components = { version = "0.1.0" }
hermes-ethereum-chain-components = { version = "0.1.0" }

cgp = { version = "0.1.0" }

hermes-runtime-components = { version = "0.1.0" }
hermes-async-runtime-components = { version = "0.1.0" }
hermes-tokio-runtime-components = { version = "0.1.0" }
hermes-chain-components = { version = "0.1.0" }
hermes-chain-type-components = { version = "0.1.0" }
hermes-runtime = { version = "0.1.0" }
hermes-error = { version = "0.1.0" }
hermes-encoding-components = { version = "0.1.0" }
hermes-logging-components = { version = "0.1.0" }
hermes-tracing-logging-components = { version = "0.1.0" }
hermes-logger = { version = "0.1.0" }
hermes-relayer-components = { version = "0.1.0" }
hermes-cosmos-chain-components = { version = "0.1.0" }
hermes-cosmos-encoding-components = { version = "0.1.0" }
hermes-cosmos-relayer = { version = "0.1.0" }
hermes-cosmos-wasm-relayer = { version = "0.1.0" }
hermes-cosmos-test-components = { version = "0.1.0" }
hermes-cosmos-integration-tests = { version = "0.1.0" }
hermes-any-counterparty = { version = "0.1.0" }
hermes-wasm-client-components = { version = "0.1.0" }
hermes-wasm-test-components = { version = "0.1.0" }
hermes-wasm-encoding-components = { version = "0.1.0" }
hermes-cli-components = { version = "0.1.0" }
hermes-test-components = { version = "0.1.0" }
hermes-cairo-encoding-components = { version = "0.1.0" }
hermes-protobuf-encoding-components = { version = "0.1.0" }
hermes-starknet-chain-components = { version = "0.1.0" }
hermes-starknet-test-components = { version = "0.1.0" }
hermes-starknet-chain-context = { version = "0.1.0" }
hermes-starknet-relayer = { version = "0.1.0" }
hermes-starknet-integration-tests = { version = "0.1.0" }

[patch.crates-io]

hermes-prover-components = { path = "crates/prover-components" }
hermes-sp1-prover-components = { path = "crates/sp1-prover-components" }
hermes-ethereum-chain-components = { path = "crates/ethereum-chain-components" }

# ibc                   = { git = "https://github.com/cosmos/ibc-rs.git" }
# ibc-core              = { git = "https://github.com/cosmos/ibc-rs.git" }
# ibc-core-client       = { git = "https://github.com/cosmos/ibc-rs.git" }
# ibc-core-host-cosmos  = { git = "https://github.com/cosmos/ibc-rs.git" }
# ibc-client-tendermint = { git = "https://github.com/cosmos/ibc-rs.git" }
# ibc-client-wasm-types = { git = "https://github.com/cosmos/ibc-rs.git" }
# ibc-app-transfer      = { git = "https://github.com/cosmos/ibc-rs.git" }
# ibc-primitives        = { git = "https://github.com/cosmos/ibc-rs.git" }
# ibc-derive            = { git = "https://github.com/cosmos/ibc-rs.git" }

ibc-relayer = { git = "https://github.com/informalsystems/hermes.git" }
ibc-telemetry = { git = "https://github.com/informalsystems/hermes.git" }
ibc-relayer-types = { git = "https://github.com/informalsystems/hermes.git" }

cgp = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-core = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-extra = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-async = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-async-macro = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-component = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-component-macro = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-component-macro-lib = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-type = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-field = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-field-macro = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-field-macro-lib = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-error = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-run = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-inner = { git = "https://github.com/contextgeneric/cgp.git" }

hermes-chain-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-chain-type-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-relayer-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-relayer-components-extra = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-runtime-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-async-runtime-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-tokio-runtime-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-runtime = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-error = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-encoding-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-protobuf-encoding-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-logging-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-tracing-logging-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-logger = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-test-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-ibc-test-suite = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-any-counterparty = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-cosmos-chain-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-cosmos-relayer = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-cosmos-wasm-relayer = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-cosmos-test-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-cosmos-encoding-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-cosmos-integration-tests = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-comet-light-client-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-comet-light-client-context = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-wasm-test-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-wasm-client-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-wasm-encoding-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-cli-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
