[package]
name = "hermes-ethereum-chain-components"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
alloy = { workspace = true, features = ["full"] }
bincode = { workspace = true }

cgp = { workspace = true }
hermes-test-components = { workspace = true }
hermes-runtime-components = { workspace = true }
hermes-chain-components = { workspace = true }
hermes-chain-type-components = { workspace = true }
hermes-encoding-components = { workspace = true }
hermes-cosmos-chain-components = { workspace = true }
