[package]
name = "hermes-sp1-prover-components"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"

[dependencies]

sp1-sdk = { workspace = true }

cgp = { workspace = true }
